--- a/style.css
+++ b/style.css
@@ -1,3 +1,44 @@
-h1 {
-    color: olive;
+.half-width img {
+    width: 60%;
+}
+.half-width h1 {
+    font-size: 70px;
+}
+.mission-color {
+    color: #7c6bea;
+}
+.exp-btn {
+    text-decoration: none;
+    padding: 15px 50px;
+    color: white;
+    background-color: #2792a5;
+    border-radius: 5px;
+}
+.top-section {
+    display: flex;
+}
+
+.half-width {
+    width: 50%;
+    padding-left: 13%;
+    padding-top: 5%;
+}
+#mission-box {
+   background-color: #2792a5;
+   margin-left: 5%; 
+   padding-left: 4%;
+  
+}
+#vission-box {
+    background-color: #7c6bea;
+    margin-left: 5%;
+    padding-left: 4%;
+   
+}
+#goals-box {
+    background-color: rgb(67, 89, 90);
+    margin-left: 5%;
+    margin-right: 4%;
+    padding-left: 4%;
+    
 }
