--- a/style.css
+++ b/style.css
@@ -76,3 +76,9 @@ h2 {
     background-size:18%;
     background-position: bottom 140px left 100px;
 }
+.know-our-global-background-image {
+    background-image: url(images/shapes/shape-1.png);
+    background-repeat: no-repeat;
+    background-size: 18%;
+    background-position: right bottom 10%;
+}
