--- a/style.css
+++ b/style.css
@@ -85,3 +85,11 @@ h2 {
 .text-size {
     width: 20%;
 }
+.footer {
+    background-color: #022222;
+    color: whitesmoke; 
+    padding-top: 1px;
+}
+footer {
+    text-align: center;
+}
