--- a/style.css
+++ b/style.css
@@ -86,10 +86,24 @@ h2 {
     width: 20%;
 }
 .footer {
-    background-color: #363607;
-    color: whitesmoke; 
+    background-color: black; 
     padding-top: 1px;
 }
 footer {
     text-align: center;
+}
+.build-half-width img {
+    width: 50%;
+}
+.build-section {
+    display: flex; 
+}
+.build-half-width fish {
+    margin-right: 10%;
+    padding-left: 5%;
+   
+}
+.build-half-width know {
+    margin-left: 10%;
+    padding-left: 5%;
 }
